--- a/layout.css
+++ b/layout.css
@@ -15,3 +15,20 @@ background: linear-gradient(
   max-width: 50rem;
   margin: auto;
 }
+
+/* @media (min-width: 800px) { */
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+nav a {
+  display: block;
+  flex: 1;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+}
+nav a:hover {
+  background-color: #bb9ae5;
+}
