--- a/layout.css
+++ b/layout.css
@@ -32,3 +32,32 @@ nav a {
 nav a:hover {
   background-color: #bb9ae5;
 }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+nav a {
+  display: block;
+  flex: 1;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+}
+nav a:hover {
+  background-color: #bb9ae5;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+nav a {
+  display: block;
+  flex: 1;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+}
+nav a:hover {
+  background-color: #bb9ae5;
+}
